# EasyBC

./: CMakeLists.txt  README.md  main.cpp  parametersInterpreterDemo.txt  parametersMILPDemo.txt
benchmarks/BlockCipher/: AES.cl  DES.cl  GIFT_64.cl  KLEIN.cl  KLEIN2.cl  LBlock.cl  MIBS_pbox.cl  MIBS_xor.cl  PRESENT.cl  PRINCE.cl  Piccolo.cl  Rectangle.cl  SIMON.cl  SIMON32.cl  SIMON48.cl  SKINNY_64tn.cl  TWINE.cl
benchmarks/NIST/: ASCON.cl  Elephant_Dumbo.cl  GIFT-COFB.cl  ISAP-KECCAK-p.cl  PHOTON-Beetle.cl  Romulus.cl  SPARKLE.cl  SPARKLE256.cl  TinyJAMBU.cl  Xoodyak.cl  grain128aead.cl  grain128aead_enc.cl  grain128aead_full.cl
benchmarks/WordWise/: AES.cl  KLEIN2.cl  LBlock.cl  MIBS.cl  MIBS1.cl  PHOTON-Beetle.cl  PHOTON-Beetle1.cl  Piccolo.cl  SKINNY_128.cl  TWINE.cl  piccoloMatrix
data/interpreterInput/BlockCipher/AES/: 1.txt  11.txt  13.txt  15.txt  16.txt  17.txt  19.txt  2.txt  20.txt  22.txt  24.txt  25.txt  26.txt  28.txt  29.txt  3.txt  31.txt  32.txt  35.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  44.txt  45.txt  46.txt  5.txt  52.txt  54.txt  55.txt  56.txt  59.txt  60.txt  62.txt  63.txt  66.txt  68.txt  70.txt  (+18 more)
data/interpreterInput/BlockCipher/DES/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+60 more)
data/interpreterInput/BlockCipher/GIFT_64/: 0.txt  1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt  2.txt  20.txt  21.txt  22.txt  23.txt  24.txt  25.txt  26.txt  27.txt  28.txt  29.txt  3.txt  30.txt  31.txt  32.txt  33.txt  34.txt  35.txt  36.txt  37.txt  38.txt  39.txt  4.txt  40.txt  41.txt  42.txt  43.txt  44.txt  (+60 more)
data/interpreterInput/BlockCipher/KLEIN/: 10.txt  12.txt  14.txt  16.txt  18.txt  2.txt  20.txt  22.txt  23.txt  24.txt  26.txt  28.txt  30.txt  32.txt  34.txt  36.txt  38.txt  4.txt  40.txt  42.txt  44.txt  46.txt  48.txt  50.txt  52.txt  54.txt  56.txt  58.txt  6.txt  60.txt  62.txt  64.txt  66.txt  68.txt  70.txt  72.txt  74.txt  76.txt  78.txt  8.txt  (+11 more)
data/interpreterInput/BlockCipher/LBlock/: 0.txt  10.txt  11.txt  12.txt  14.txt  16.txt  17.txt  18.txt  19.txt  2.txt  21.txt  22.txt  23.txt  25.txt  27.txt  3.txt  30.txt  5.txt  (+50 more)
data/sbox/ARX/: Ascon_128_permutation_p12.sage  Ascon_128_permutation_p12.sage.py  Ascon_128_permutation_p12.txt  LBlock.sage.py
include/branchNum/: BranchNum.h
include/differential/: DiffMILPcons.h  DiffSBMILP.h  DiffSWMILP.h
include/interpreter/: semanticInter.h
include/preprocessing/: ASTNode.h  Interpreter.h  ProcedureH.h  ThreeAddressNode.h  Transformer.h  Value.h  ValueCommon.h
include/sbox/: Check.h  Reduction.h  SboxExtC.h  SboxModel.h  SyntaxGuided.h  superball.h  superballMGR.h
include/util/: setup.h  utilities.h
lib/branchNum/: BranchNum.cpp
lib/differential/: DiffMILPcons.cpp  DiffSBMILP.cpp  DiffSWMILP.cpp
lib/interpreter/: semanticInter.cpp
lib/language/: lexer.l  parser.y
lib/preprocessing/: ASTNode.cpp  ProcedureH.cpp  Transformer.cpp  ValueCommon.cpp
lib/sbox/: Check.cpp  Reduction.cpp  SboxModel.cpp  superball.cpp  superballMGR.cpp
lib/util/: utilities.cpp
z3/include/: z3++.h  z3.h  z3_api.h
(+1984 files in other folders)
